--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "chart.js": "^2.7.2",
+    "lodash": "^4.17.10",
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "vue": "^2.5.16",
@@ -19,9 +20,11 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.110",
     "@vue/cli-plugin-babel": "^3.0.0-rc.2",
     "@vue/cli-plugin-typescript": "^3.0.0-rc.2",
     "@vue/cli-service": "^3.0.0-rc.2",
+    "tslint-config-prettier": "^1.13.0",
     "vue-template-compiler": "^2.5.16"
   },
   "browserslist": [
